--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('./assets/styles/index.css');
+@import url('./assets/iconfont/iconfont.css');
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
